# api/swagger/swagger.yaml
@@ -8,15 +8,15 @@ info:
     license:
         name: Apache 2.0
         url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-host: zanmilearn.herokuapp.com
+host: 'localhost:10100'
 basePath: /v2
 tags:
     - 
         name: Courses
         description: Course Apis
     - 
-        name: Topics
-        description: Topics Apis
+        name: Users
+        description: 'User Apis for login & register'
 schemes:
     - http
     - https
@@ -29,7 +29,7 @@ paths:
         x-swagger-router-controller: courses
         get:
             tags:
-                - courses
+                - Courses
             description: Get all Courses
             operationId: getAllCourses
             responses:
@@ -43,7 +43,7 @@ paths:
                         $ref: '#/definitions/ErrorResponse'
         post:
             tags:
-                - courses
+                - Courses
             description: Create a new Course
             operationId: createCourse
             parameters:
@@ -58,6 +58,43 @@ paths:
                     description: Success
                     schema:
                         $ref: '#/definitions/getAllCoursesResponse'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+    /users:
+        x-swagger-router-controller: users
+        get:
+            tags:
+                - Users
+            description: Get all Users
+            operationId: getAllUsers
+            responses:
+                '200':
+                    description: Success
+                    schema:
+                        $ref: '#/definitions/getAllUsersResponse'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/ErrorResponse'
+        post:
+            tags:
+                - Users
+            description: Create a new user/register
+            operationId: createUser
+            parameters:
+                - 
+                    name: payload
+                    in: body
+                    description: user object
+                    schema:
+                        $ref: '#/definitions/getAllUsersResponse'
+            responses:
+                '200':
+                    description: Success
+                    schema:
+                        $ref: '#/definitions/getAllUsersResponse'
                 default:
                     description: Error
                     schema:
@@ -81,6 +118,34 @@ definitions:
             courseDesc:
                 type: string
             courseType:
+                type: string
+    getAllUsersResponse:
+        required:
+            - username
+            - password
+            - email
+        properties:
+            username:
+                type: string
+            password:
+                type: string
+            email:
+                type: string
+            location:
+                type: string
+            active:
+                type: boolean
+            verified:
+                type: boolean
+            created_at:
+                type: string
+            updated_at:
+                type: string
+    usernameParamResponse:
+        required:
+            - username
+        properties:
+            username:
                 type: string
     ErrorResponse:
         required:
